--- a/.env.sample
+++ b/.env.sample
@@ -18,3 +18,6 @@ EMAIL_ADDRESS = 'noreply.dev@mehdns.06222001.xyz'
 # Admin Credentials
 ADMIN_EMAIL = 'admin@test.com'
 ADMIN_PASSWORD = ''
+
+# To insert test data or not
+TEST_DATA = "True"
