--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 cryptography==43.0.3
 defusedxml==0.8.0rc2
 Django==5.1.3
+django-cleanup==9.0.0
 django-cors-headers==4.6.0
 django-rest-framework==0.1.0
 django-unfold==0.41.0
