--- a/.env.sample
+++ b/.env.sample
@@ -19,5 +19,5 @@ EMAIL_ADDRESS = 'noreply.dev@mehdns.06222001.xyz'
 ADMIN_EMAIL = 'admin@test.com'
 ADMIN_PASSWORD = ''
 
-# To insert test data or not
+# To insert test data or not (UNUSED)
 TEST_DATA = "True"
