--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,5 @@ tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
 whitenoise==6.8.2
+django-extensions==3.2.3
+pygraphviz==1.14; platform_system == 'Linux'
