--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.8.0rc2
 Django==5.1.3
 django-cleanup==9.0.0
 django-cors-headers==4.6.0
+django-extensions==3.2.3
 django-rest-framework==0.1.0
 django-unfold==0.41.0
 djangorestframework==3.15.2
@@ -18,18 +19,28 @@ djangorestframework-simplejwt==5.3.1
 djoser==2.3.1
 drf-spectacular==0.27.2
 drf-spectacular-sidecar==2024.11.1
+filelock==3.16.1
+fsspec==2024.10.0
 gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
+Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+MarkupSafe==2.1.5
+mpmath==1.3.0
 mypy-extensions==1.0.0
+networkx==3.4.2
 oauthlib==3.2.2
 packaging==24.2
 pathspec==0.12.1
+pillow==11.0.0
 platformdirs==4.3.6
 pycparser==2.22
+pyflakes==3.2.0
 PyJWT==2.10.0
+PyMuPDF==1.24.14
+pytesseract==0.3.13
 python-dotenv==1.0.1
 python3-openid==3.2.0
 PyYAML==6.0.2
@@ -37,12 +48,14 @@ referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.21.0
+setuptools==70.2.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.2
+sympy==1.13.1
+typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
 whitenoise==6.8.2
-django-extensions==3.2.3
 pygraphviz==1.14; platform_system == 'Linux'
