--- a/requirements.txt
+++ b/requirements.txt
@@ -57,5 +57,6 @@ typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
+watchdog==6.0.0
 whitenoise==6.8.2
 pygraphviz==1.14; platform_system == 'Linux'
