Add Ollama integration

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,8 @@ ADMIN_PASSWORD = ''
 
 # To insert test data or not (UNUSED)
 TEST_DATA = "True"
+
+# Ollama for Categorization 
+OLLAMA_URL = ""
+OLLAMA_USERNAME = ""
+OLLAMA_PASSWORD = ""
