--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.7.0
 asgiref==3.8.1
 attrs==24.2.0
 black==24.10.0
@@ -22,6 +24,9 @@ drf-spectacular-sidecar==2024.11.1
 filelock==3.16.1
 fsspec==2024.10.0
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
 idna==3.10
 inflection==0.5.1
 Jinja2==3.1.4
@@ -32,11 +37,14 @@ mpmath==1.3.0
 mypy-extensions==1.0.0
 networkx==3.4.2
 oauthlib==3.2.2
+ollama==0.4.4
 packaging==24.2
 pathspec==0.12.1
 pillow==11.0.0
 platformdirs==4.3.6
 pycparser==2.22
+pydantic==2.10.3
+pydantic_core==2.27.1
 pyflakes==3.2.0
 PyJWT==2.10.0
 PyMuPDF==1.24.14
@@ -49,6 +57,7 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.21.0
 setuptools==70.2.0
+sniffio==1.3.1
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.2
