--- a/.env.sample
+++ b/.env.sample
@@ -23,8 +23,8 @@ ADMIN_PASSWORD = ''
 TEST_DATA = "True"
 
 # Ollama for Categorization 
-OLLAMA_URL = "localhost:11434"
+OLLAMA_URL = "http://localhost:11434"
 OLLAMA_USE_AUTH = "False"
-OLLAMA_MODEL = "knoopx/mobile-vlm:3b-fp16"
+OLLAMA_MODEL = "llama3.2-vision"
 OLLAMA_USERNAME = ""
 OLLAMA_PASSWORD = ""
